# llvm

clang/include/clang/Basic/: DiagnosticDriverKinds.td  DiagnosticGroups.td  LangOptions.h  SYCLNativeCPUHelpers.h
clang/include/clang/Driver/: Driver.h  Options.td
clang/lib/CodeGen/: BackendUtil.cpp  CodeGenModule.cpp
clang/lib/Driver/: Driver.cpp
clang/lib/Driver/ToolChains/: Clang.cpp  SYCL.cpp  SYCL.h
clang/lib/Sema/: SemaSYCL.cpp
clang/test/Driver/: sycl-host-compilation-fsycl.cpp  sycl-host-compilation.cpp  sycl-native-cpu-fsycl.cpp  sycl-native-cpu.cpp
clang/test/SemaSYCL/host_compilation/: buitlins.cpp  kernelhandler-scalar.cpp  kernelhandler.cpp  kernelhandler_noargs.cpp  prepare-hc.ll
clang/test/SemaSYCL/native_cpu/: builtins.cpp  kernelhandler-scalar.cpp  kernelhandler.cpp  kernelhandler_noargs.cpp  kernelhandler_noargs2.cpp
libclc/: CMakeLists.txt
libclc/cmake/modules/: AddLibclc.cmake
libclc/generic/libspirv/atomic/: atomic_add.cl  atomic_and.cl  atomic_cmpxchg.cl  atomic_load.cl  atomic_or.cl  atomic_xor.cl
libdevice/cmake/modules/: SYCLLibdevice.cmake
llvm/include/llvm/: InitializePasses.h  LinkAllPasses.h
llvm/include/llvm/SYCLLowerIR/: EmitSYCLHCHeader.h  EmitSYCLNativeCPUHeader.h  PrepareSYCLHostCompilation.h  PrepareSYCLNativeCPU.h  UtilsSYCLNativeCPU.h
llvm/lib/Passes/: PassBuilder.cpp  PassRegistry.def
llvm/lib/SYCLLowerIR/: CMakeLists.txt  ConvertToMuxBuiltinsSYCLNativeCPU.cpp  EmitSYCLHCHeader.cpp  EmitSYCLNativeCPUHeader.cpp  PipelineSYCLNativeCPU.cpp  PrepareSYCLHostCompilation.cpp  PrepareSYCLNativeCPU.cpp
llvm/lib/SYCLNativeCPUUtils/: ConvertToMuxBuiltinsSYCLNativeCPU.cpp  PrepareSYCLNativeCPU.cpp
llvm/tools/opt/: opt.cpp
sycl/doc/: sycl-host-compialtion.md  sycl-host-compilation.md  sycl-native-cpu.md
sycl/doc/design/: SYCLNativeCPU.md
sycl/include/CL/__spirv/: spirv_vars.hpp
sycl/include/sycl/: handler.hpp
sycl/include/sycl/detail/: host_compilation.hpp  native_cpu.hpp  (+1 more)
sycl/plugins/native_cpu/: CMakeLists.txt  pi_native_cpu.cpp
sycl/plugins/unified_runtime/: CMakeLists.txt
sycl/source/: CMakeLists.txt  handler.cpp  host_compilation.cpp  kernel_bundle.cpp
sycl/source/detail/: handler_impl.hpp
sycl/source/host_compilation_lib/: lib.cpp
sycl/test/host_compilation/: driver-fsycl.cpp  example-sycl-application.cpp  scalar_args.cpp  vector-add.cpp
sycl/test/native_cpu/: example-sycl-application.cpp  local_basic.cpp  thread_env_var.cpp  vector-add.cpp
(+9 files in other folders)
